# 2023-MAI-IR-E-Zhivalev

./: CMakeLists.txt  README.md  indexer_main.cpp  scraper.py  search_main.cpp
include/: engine.h  index.h  indexer.h  lexer.h  tokenizer.h  utils.h
src/: engine.cpp  index.cpp  indexer.cpp  lexer.cpp  tokenizer.cpp  utils.cpp
tests/: CMakeLists.txt  lexer_test.cpp  tokenizer_test.cpp
